--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         smaller dots.Every time you eat a dot you grow in size.   </p>
 
     <p>
-      Check out the code on Github: <a href="https://radujianu.github.io/">https://radujianu.github.io/</a>
+      Check out the code on Github: <a href="https://github.com/khalidtakar/Khalid_Takar_project_bootcamp">https://github.com/khalidtakar/Khalid_Takar_project_bootcamp</a>
     </p>
   <td>
 	<video width="429" height="200" controls>
