--- a/index.html
+++ b/index.html
@@ -28,12 +28,18 @@
   <tr>
     <td class="infotd">
       <h3>Khalid Takar</h3>
-      <p> Add some information about yourself. For now we're happy to know anything you're
-      willing to share about yourself (though one thing we are curious about is your programming
-      experience before bootcamp). As your progress through your degree at City you will 
-      be able to add more here (e.g., interests, skills, experience, a link to a CV). However,
-      even then, it's better to keep this information concise (about a paragraph or two)
-      and let your CV and the projects below to do the rest of the talking.</p> 
+      <p>I'm a first year Computer Science student at city university working on my 
+      first ever work portfolio,I'm a Somalian who has worked in two tuition centres 
+      these past previous years and I'm the Current Finance Officer of Somali society 
+      and I've recieved a Duke of Edinburgh Bronze whilst completing my A-levels and 
+      GCSE's.I've studied Maths,Physics and Economics so I honestly really didn't have 
+      the greatest coding knowledge except from a summer hobby of going through a UDEMY 
+      python course,however with the help of the lectures and some of the classmates a 
+      really improve in my computational thinking and a good first module which brought 
+      me up to speed with coding and enhanced my university experience and learnt a 
+      little on my second coding language being Java.Some of my hobbies consist of FIFA,
+      watching Chelsea and some Netflix.In the future I hope to nurture my interest in 
+      coding and computer science and become a competent software engineer. </p> 
     </td>
     <td>
 	<img src="khalid.jpg" width=300px></img>
