images_of_project

--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
   </td>
 <tr>
  <td colspan = 2 align=center>
-	<img src="pic1.png" width="285px">
-	<img src="pic2.png" width="265px">
-	<img src="pic3.png" width="255px">
+	<img src="code.png" width="285px">
+	<img src="gameRun.png" width="265px">
+	<img src="gameLost.png" width="255px">
+        <img src="gameWon.png" width="245px">
  </td>
 </tr>
  </tr>
