more_code_images

--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
   </td>
 <tr>
  <td colspan = 2 align=center>
-	<img src="code.png" width="285px">
-	<img src="gameRun.png" width="285px">
+	<img src="code_main.png" width="285px">
+	<img src="code_enemy.png" width="285px">
+        <img src="code_food.png" width="285px">
+        <img src="gameRun.png" width="285px">
 	<img src="gameLost.png" width="285px">
         <img src="gameWon.png" width="285px">
  </td>
