--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
         use of arrays, loops, and If statements and uses two classes to refactor my code
         whilst introducing interaction within my game and importing sounds.I created an 
         Agario like game in which a game in which you take charge of a tiny cell,eating 
-        smaller dots.Every time you eat a dot you grow in size.   </p>
+        smaller dots.Every time you eat a dot you grow in size however if you touch the 
+        ellipse barrier the game is lost but if you eat all the smaller dots you win the
+        game.   </p>
 
     <p>
       Check out the code on Github: <a href="https://github.com/khalidtakar/Khalid_Takar_project_bootcamp">https://github.com/khalidtakar/Khalid_Takar_project_bootcamp</a>
