--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
   <tr>
     <td class="infotd">
       <h3>Khalid Takar</h3>
-      <p>I'm a first year Computer Science student at city university working on my 
-      first ever work portfolio,I'm a Somalian who has worked in two tuition centres 
-      these past previous years and I'm the Current Finance Officer of Somali society 
-      and I've recieved a Duke of Edinburgh Bronze whilst completing my A-levels and 
-      GCSE's.I've studied Maths,Physics and Economics so I honestly really didn't have 
-      the greatest coding knowledge except from a summer hobby of going through a UDEMY 
-      python course,however with the help of the lectures and some of the classmates a 
-      really improve in my computational thinking and a good first module which brought 
-      me up to speed with coding and enhanced my university experience and learnt a 
-      little on my second coding language being Java.Some of my hobbies consist of FIFA,
-      watching Chelsea and some Netflix.In the future I hope to nurture my interest in 
-      coding and computer science and become a competent software engineer. </p> 
+      <p>I'm a first year Computer Science student at City University of London 
+      working on my first ever work portfolio,I'm a Somalian who has worked in two
+      tuition centres these past previous years and I'm the Current Finance Officer 
+      of Somali society and I've recieved a Duke of Edinburgh Bronze whilst completing 
+      my A-levels and GCSE's.I've studied Maths,Physics and Economics so I honestly 
+      really didn't have the greatest coding knowledge except from a summer hobby of 
+      going through a UDEMY python course, however with the help of the lectures and 
+      some of the classmates a really improve in my computational thinking and a good 
+      first module which brought me up to speed with coding and enhanced my university 
+      experience and learnt a little on my second coding language being Java.Some of my 
+      hobbies consist of FIFA,watching Chelsea and some Netflix.In the future I hope to 
+      nurture my interest in coding and computer science and become a competent software engineer. </p> 
     </td>
     <td>
 	<img src="khalid.jpg" width=300px></img>
