--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       going through a UDEMY python course, however with the help of the lectures and 
       some of the classmates a really improve in my computational thinking and a good 
       first module which brought me up to speed with coding and enhanced my university 
-      experience and learnt a little on my second coding language being Java.Some of my 
-      hobbies consist of FIFA, watching Chelsea and some Netflix. In the future I hope to 
-      nurture my interest in coding and computer science and become a competent software engineer. </p> 
+      experience and learnt a little on my second coding language being Java. Some of 
+      my hobbies consist of FIFA, watching Chelsea and some Netflix. In the future I hope 
+      to nurture my interest in coding and computer science and become a competent software engineer. </p> 
     </td>
     <td>
 	<img src="khalid.jpg" width=300px></img>
