--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <td class="infotd">
       <h3>Khalid Takar</h3>
       <p>I'm a first year Computer Science student at City University of London 
-      working on my first ever work portfolio, I'm a Somalian who has worked in two
+      working on my first ever work portfolio, I'm a Somali who has worked in two
       tuition centres these past previous years and I'm the Current Finance Officer 
       of Somali society and I've recieved a Duke of Edinburgh Bronze whilst completing 
       my A-levels and GCSE's. I've studied Maths, Physics and Economics so I honestly 
