added my second project images and detail into my portfolio

--- a/index.html
+++ b/index.html
@@ -86,4 +86,72 @@
  </tr>
 </table>
 </body>
+
+
+
+
+<head>
+ <style type="text/css">
+   body{
+      background-color:rgb(50,50,50);
+      color:white
+   }
+   a{
+      color:rgb(210,210,255)
+   }
+   img{
+      margin: 15px 15px 15px 15px
+   }
+   hr{
+      border-top: 1px solid gray;
+   }
+   .infotd{
+     vertical-align:top
+   }
+ </style>
+</head>
+   </td>
+  </tr>
+  <tr>
+    <td colspan=2>
+       <hr>
+    </td>
+  </tr>
+
+ <tr>
+  <td class="infotd">
+    <h3>Java Project 2022: Ichigo Slayer</h3>
+    <p>
+	My Second programming project,which took a period of months and 3 milestones to complete a full on Java game    
+        Application,The concept of my game is a character slaying game where he progresses through each level by killing enemies.
+        There are four levels,each increasing in difficulty and also obstacles which would take away lives.</p>
+
+    <p>
+      Check out the code on Github: <a href="https://github.com/cityteaching/citygame2122-khalidtakar">https://github.com/cityteaching/citygame2122-khalidtakar</a>
+    </p>
+  <td>
+	<video width="429" height="200" controls>
+	<source src="codegameplay.mp4" type="video/mp4">
+	</video>
+  <td>
+  </td>
+<tr>
+ <td colspan = 2 align=center>
+	<img src="Screen1.png" width="285px">
+	<img src="Screen2.png" width="285px">
+        <img src="Screen3.png" width="285px">
+        <img src="Screen4.png" width="285px">
+	<img src="Screen5.png" width="285px">
+        <img src="Screen6.png" width="285px">
+        <img src="Screen7.png" width="285px">
+        <img src="Screen8.png" width="285px">
+        <img src="Screen9.png" width="285px">
+ </td>
+</tr>
+ </tr>
+</table>
+</body>
+
+
+
 </html>
