Added my second game project video

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       to nurture my interest in coding and computer science and become a competent software engineer. </p> 
     </td>
     <td>
-	<img src="khalid.jpg" width=300px></img>
+	<img src="khalid.jpg" width=200px></img>
     </td>
   </tr>
   <tr>
@@ -131,21 +131,21 @@
     </p>
   <td>
 	<video width="429" height="200" controls>
-	<source src="codegameplay.mp4" type="video/mp4">
+	<source src="JavaGameVid.mp4" type="video/mp4">
 	</video>
   <td>
   </td>
 <tr>
  <td colspan = 2 align=center>
-	<img src="Screen1.png" width="285px">
-	<img src="Screen2.png" width="285px">
-        <img src="Screen3.png" width="285px">
-        <img src="Screen4.png" width="285px">
-	<img src="Screen5.png" width="285px">
-        <img src="Screen6.png" width="285px">
-        <img src="Screen7.png" width="285px">
-        <img src="Screen8.png" width="285px">
-        <img src="Screen9.png" width="285px">
+	<img src="Screen1.png" width="275px">
+	<img src="Screen2.png" width="275px">
+        <img src="Screen3.png" width="275px">
+        <img src="Screen4.png" width="275px">
+	<img src="Screen5.png" width="275px">
+        <img src="Screen6.png" width="275px">
+        <img src="Screen7.png" width="275px">
+        <img src="Screen8.png" width="275px">
+        <img src="Screen9.png" width="275px">
  </td>
 </tr>
  </tr>
